<?xml version="1.0"?>
<package>
  <name>ezn64</name>
  <version>1.0.0</version>
  <description> Xacro model and usb driver for basic communication with Schunk EZN64 gripper </description>
  
  <maintainer email="durovsky987@gmail.com">durovsky</maintainer>
  
  <license>BSD</license>

  <url type="website">http://www.smartroboticsys.eu/</url> 
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>libusb-1.0</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>libusb-1.0</run_depend>
    
</package>
