<?xml version="1.0"?>
<package>
  <name>schunk_pg70</name>
  <version>1.3.7</version>
  <description> Xacro model and RS232 control node for basic communication with Schunk PG70 gripper</description>
  
  <maintainer email="frantisek.durovsky@smartroboticsys.eu">Frantisek Durovsky</maintainer>
  <license>BSD</license>
  <url type="website">http://www.smartroboticsys.eu/</url> 
  <author email="frantisek.durovsky@smartroboticsys.eu">Frantisek Durovsky</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tf</run_depend>
    
</package>
